[project]
name = "muse_osc_mcp"
version = "0.1.0"
description = "MCP server to record Muse EEG OSC data into PostgreSQL (AWS Aurora)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Massimo Bardetti", email = "byron.the.bulb@gmail.com" }]
license = "MIT"

# Core runtime dependencies
dependencies = [
    "python-osc>=1.8.0",
    "SQLAlchemy>=2.0",
    "asyncpg>=0.29",
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.2",
    "greenlet>=2.0",

    # MCP SDK – use main branch until versioned release
    "mcp @ git+https://github.com/modelcontextprotocol/python-sdk",
    "enrichmcp @ git+https://github.com/featureform/enrichmcp.git"
]

[project.optional-dependencies]
# Dev / lint / test extras (install with `pip install .[dev]`)
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-dotenv",
]

[project.scripts]
muse-osc-mcp = "muse_osc_mcp.mcp:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["muse_osc_mcp*"]
exclude = ["manual_tests*"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
